--- a/app/src/main/res/layout/item_superhero.xml
+++ b/app/src/main/res/layout/item_superhero.xml
@@ -1,20 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/avatarImageView"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:scaleType="centerCrop"/>
-
-    <TextView
-        android:id="@+id/nameTextView"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:text="Superhero name"
-        android:textSize="24sp"/>
+        android:layout_margin="8dp"
+        app:cardCornerRadius="16dp"
+        app:cardElevation="4dp">
+
+             <ImageView
+                android:id="@+id/avatarImageView"
+                android:layout_width="match_parent"
+                android:layout_height="240dp"
+                android:scaleType="centerCrop"/>
+
+            <TextView
+                android:id="@+id/nameTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:layout_gravity="bottom"
+                android:background="@color/black"
+                android:textColor="@color/white"
+                tools:text="nombre del super héroe"
+                android:shadowRadius="5"
+                android:shadowColor="@color/white"
+                android:textSize="20sp"/>
+
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
