--- a/app/src/main/res/menu/menu_main_activity.xml
+++ b/app/src/main/res/menu/menu_main_activity.xml
@@ -7,7 +7,7 @@
         android:title="Search"
         android:icon="@drawable/icon_search"
         app:showAsAction="always|collapseActionView"
-        android:actionViewClass="androidx.appcompat.widget.SearchView"
+        app:actionViewClass="androidx.appcompat.widget.SearchView"
         />
 
 </menu>
