--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="black">#614DE190</color>
+    <color name="white">#FFFFFF</color>
     <color name="yellow">#FFEB3B</color>
+    <color name="negro">#000000</color>
+
+    <color name="purple_200">#009CE9</color>
+    <color name="purple_500">#FF3900</color>
+    <color name="purple_700">#DC0000</color>
+    <color name="teal_200">#FFDA00</color>
+    <color name="teal_700">#FFBC00</color>
 </resources>
